[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ui/VSkewBoxContainer.gd" type="Script" id=1]
[ext_resource path="res://assets/smash_theme/smash_theme.theme" type="Theme" id=2]
[ext_resource path="res://scripts/draft/OptionsView.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/FireMaterial.material" type="Material" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/smash_theme/fira-sans-font/FiraSans-ExtraBoldItalic.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[node name="OptionsView" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraftModeTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.433
margin_top = 37.0647
margin_right = -5.43274
margin_bottom = 76.0647
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RANKED DRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraftModeTitle2" type="Label" parent="DraftModeTitle"]
material = ExtResource( 4 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.0
margin_right = 110.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RANKED DRAFT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraftOptionsContainer" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 89.0
margin_top = 124.316
margin_right = -77.0
margin_bottom = -123.684
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
invert_orientation = true
children_width = 500.0
separation = 10.0

[node name="ButtonTiersContainer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -105.0
margin_right = 68.0
margin_bottom = -37.0
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
